--- a/style/applied/_viewer.scss
+++ b/style/applied/_viewer.scss
@@ -44,7 +44,7 @@ Safari requires that scroll snapping be applied to <body>
 
 .viewer-track {
     grid-column: var(--grid-column-left);
-    border: 1px solid lime;
+//     border: 1px solid lime;
     position: absolute;
     top:-64px;
     left:   calc(var(--grid-outer-gap-l) * -1);
@@ -54,8 +54,7 @@ Safari requires that scroll snapping be applied to <body>
     pointer-events: none;
     
     .viewer-container {
-//         background: magenta;
-        height: 50vh;
+        height: 50vh; // Temporary, to keep text visible
         width: 100%;
         position: sticky;
         top: 0;
@@ -67,6 +66,7 @@ Safari requires that scroll snapping be applied to <body>
         
         @media screen and (min-width: $bp-single-col) {
             background: none;
+            height: auto;
         }
     }
     
